--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <header>
-  <img src="SUNU LOGO.jfif" alt="Logo SUNU" />
+  <img src="SUNU_LOGO.png" alt="Logo SUNU" />
   <h1>Feedback Client</h1>
 </header>
 
