--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header>
     <img src="SUNU_LOGO.png" alt="Logo SUNU" />
-    <h1>Feedback Client</h1>
+    <h1>FEEDBACK CLIENT</h1>
   </header>
 
   <div class="container">
@@ -85,11 +85,5 @@
   </div>
 
   <script src="FORMULAIRE.js"></script>
-<form autocomplete="off">
-  <input type="text" name="nom" autocomplete="off" />
-  <input type="text" name="prenom" autocomplete="off" />
-  <input type="tel" name="numero_telephone" autocomplete="off" />
-  <!-- autres champs -->
-</form>
 </body>
 </html>
